--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
+.header {
+  background-color: grey;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin-top: -40px; /* Adjust the negative margin to compensate for the header padding */
+}
+.phoneNo{
+margin-left: 40px;
+margin-right: 70px;
+}
+.callDateFrom{
+margin-right: 100px;
+}
+.campaignId{
+  margin-right: 140px;
+  margin-left: 30px;
+}
+.input-field1{
+  padding: 3px;
+  margin: 5px;
+  width: 160px;
+}
+.input-field2{
+  padding: 3px;
+  margin: 5px;
+  width: 160px;
+}
+.form-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.input-field {
+  padding: 5px;
+  margin: 5px;
+}
+
+.button-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.btn-save,
+.btn-clear {
+  padding: 10px 20px;
+  margin: 0 10px;
+  color: black;
+  background-color: white;
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.table {
+  margin-top: 20px;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-header {
+  background-color: #f0f0f0;
+  padding: 10px;
 }
